--- a/package.json
+++ b/package.json
@@ -45,14 +45,17 @@
     "acme": "3.0.3",
     "algoliasearch": "4.2.0",
     "apollo-fetch": "0.7.0",
+    "apollo-link-context": "1.0.20",
     "apollo-server": "2.12.0",
     "apollo-server-express": "2.12.0",
     "auto-load": "3.0.4",
     "aws-sdk": "2.663.0",
+    "axios": "0.19.2",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
     "body-parser": "1.19.0",
+    "bootstrap-vue": "2.14.0",
     "chalk": "4.0.0",
     "cheerio": "1.0.0-rc.3",
     "chokidar": "3.3.1",
@@ -79,12 +82,15 @@
     "fs-extra": "9.0.0",
     "getos": "3.2.0",
     "graphql": "14.6.0",
+    "graphql-import": "1.0.2",
     "graphql-list-fields": "2.0.2",
     "graphql-rate-limit-directive": "1.2.1",
     "graphql-subscriptions": "1.1.0",
     "graphql-tools": "4.0.7",
+    "graphql.macro": "1.4.2",
     "he": "1.2.0",
     "highlight.js": "10.0.0",
+    "http-vue-loader": "1.4.2",
     "i18next": "19.4.3",
     "i18next-express-middleware": "2.0.0",
     "i18next-node-fs-backend": "2.1.3",
@@ -122,6 +128,7 @@
     "nanoid": "3.1.3",
     "node-2fa": "1.1.2",
     "node-cache": "5.1.0",
+    "node-fetch": "2.6.0",
     "nodemailer": "6.4.6",
     "objection": "2.1.3",
     "passport": "0.4.1",
@@ -240,7 +247,7 @@
     "filepond-plugin-file-validate-type": "1.2.5",
     "filesize.js": "2.0.0",
     "graphql-persisted-document-loader": "2.0.0",
-    "graphql-tag": "^2.10.3",
+    "graphql-tag": "2.10.3",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "4.2.0",
     "html-webpack-pug-plugin": "2.0.0",
